Straightened out the poms hierarchy.